feat: basic dragging for elk compound nodes

--- a/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
+++ b/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
@@ -72,6 +72,7 @@
           [id]="node.id"
           [attr.transform]="node.transform"
           (click)="onClick(node)"
+          (mousedown)="onNodeMouseDown($event, node)"
         >
           <ng-container
             *ngIf="nodeTemplate"
