Completely disable MouseWheelDirective if not needed
This makes it possible to still listen to onMouseWheel Events when no Zoom/Trackpad is enabled.

--- a/src/docs/demos/components/ngx-graph-org-tree/ngx-graph-org-tree.component.html
+++ b/src/docs/demos/components/ngx-graph-org-tree/ngx-graph-org-tree.component.html
@@ -7,7 +7,8 @@
   [nodeWidth]="150"
   [nodeHeight]="100"
   [layoutSettings]="layoutSettings"
-  [enableZoom]="true"
+  [enableZoom]="enableZoom"
+  [enableTrackpadSupport]="enableTrackpadSupport"
   [autoZoom]="true"
 >
   <ng-template #defsTemplate>
