--- a/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
+++ b/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
@@ -5,7 +5,7 @@
   [@.disabled]="!animations"
   (mouseWheelUp)="onZoom($event, 'in')"
   (mouseWheelDown)="onZoom($event, 'out')"
-  mouseWheel
+  [mouseWheelEnabled]="enableZoom || enableTrackpadSupport"
 >
   <svg:svg class="ngx-charts" [attr.width]="width" [attr.height]="height">
     <svg:g
