feat: add ng-content at the end of the svg to allow users to add custom svg elements over the nodes.
As SVG Renders in Order as provided in the DOM with the current approach we can only add elements in the background but this ng-content allows with the class "end-content" to brings them into the foreground

--- a/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
+++ b/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
@@ -128,6 +128,8 @@
           />
         </svg:g>
       </svg:g>
+
+      <ng-content select=".end-content"></ng-content>
     </svg:g>
 
     <svg:clipPath [attr.id]="minimapClipPathId">
