fix: rendering issues

--- a/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
+++ b/projects/swimlane/ngx-graph/src/lib/graph/graph.component.html
@@ -12,7 +12,7 @@
       *ngIf="initialized && graph"
       [attr.transform]="transform"
       (touchstart)="onTouchStart($event)"
-      (touchend)="onTouchEnd($event)"
+      (touchend)="onTouchEnd()"
       class="graph chart"
     >
       <defs>
